@startuml

class Board {
	' + Board() 
	' + void reset() 
	' + boolean isComplete(Color)
	' - Coordinate[] getCoordinates(Color)
	' + void putToken(Coordinate, Color)
	' + void moveToken(Coordinate, Coordinate) 
	' - Color getColor(Coordinate) 
	' + boolean isOccupied(Coordinate, Color) 
	' + boolean isEmpty(Coordinate)
	' + boolean isTicTacToe(Color) 
	' - Direction[] getDirections(Color)
	' + void write()
	' + boolean isComplete(Color)
}

class BoardView {
	' - Board board
	' + BoardView(board)
	' + void write()
}

class BoundedIntDialogView {
	' - ClosedInterval LIMITS
	' + BoundedIntDialog(int, int)
	' + int read(String) 
	' - String getLimits()
}

enum Color {
	' X,
	' O,
	' NULL
	' + {static} Color get(int)
	' + void write() 
	' + boolean isNull()
}

' class Console {
' 	- {static} Console instance = new Console()
' 	+ {static} Console getInstance()
' 	- BufferedReader bufferedReader
' 	+ String readString(String) 
' 	+ String readString()
' 	+ int readInt(String) 
' 	+ char readChar(String) 
' 	+ void write(String)
' 	+ void write(int)
' 	+ void write(char)
' 	+ void writeln()
' 	+ void writeln(String)
' 	+ void writeln(int) 
' 	+ void writeError(String) 
' }

class Coordinate {
	' - int row
	' - int column
	' + Coordinate() 
	' + Coordinate(int, int) 
	' + Direction getDirection(Coordinate)
	' - boolean inHorizontal(Coordinate)
	' - boolean inVertical(Coordinate)
	' - boolean inMainDiagonal() 
	' - boolean inInverseDiagonal() 
	' + String getErrorMessage() 
	' + int getRow()
	' + int getColumn()
	' + boolean equals(Coordinate)
}

class BoundedCoordinate {
	' - {static} int DIMENSION = 3
	' - Coordinate coordinate
	' + {static} int getDimension()
	' + BoundedCoordinate() 
	' + BoundedCoordinate(int, int) 
	' + Direction getDirection(Coordinate)
	' + int getRow()
	' + int getColumn()
}

class BoundedCoordinateView {
	' - BoundedCoordinate Boundedcoordinate
	' + void read(String)
	' + String getErrorMessage() 

}

enum Direction {
	' VERTICAL,
	' HORIZONTAL,
	' MAIN_DIAGONAL,
	' INVERSE_DIAGONAL,
	' NULL
	' + boolean isNull() 
}

enum Error {
	' NOT_EMPTY
	' NOT_OWNER
	' SAME_COORDINATES
	' WRONG_COORDINATES
	' NULL
	' - String message
	' - Error()
	' - Error(String)
	' + void writeln()
	' + boolean isNull()
}

enum Message {
	' TITLE
	' HORIZONTAL_LINE
	' VERTICAL_LINE
	' NULL_COLOR
	' TURN
	' ENTER_COORDINATE_TO_PUT
	' COORDINATE_TO_PUT
	' COORDINATE_TO_REMOVE
	' COORDINATE_TO_MOVE
	' ROW
	' COLUMN
	' BOUNDED_INT_ERROR
	' LIMITS
	' CLOSED_INTERVAL
	' PLAYER_WIN
	' RESUME
	' YES_NO_SUFFIX
	' YES_NO_ERROR
	' + {static} char AFFIRMATIVE
	' + {static} char NEGATIVE
	' + {static} String $COLOR
	' + {static} String $PLAYER
	' + {static} String $CLOSED_INTERVAL
	' + {static} String $MIN
	' + {static} String $MAX
	' - String message
	' - Message(String)
	' + void write()
	' + void writeln() 
	' + void writeln(String)
	' + String toString() 
}

class Player {
	' + Player(Color, Board)
	' + void play() 
	' - void putToken()
	' - Coordinate getCoordinate(Message) 
	' - Error getPutTokenError(Coordinate)
	' - void moveToken() 
	' - Error getOriginMoveTokenError(Coordinate) 
	' - Error getTargetMoveTokenError(Coordinate, Coordinate)
	' + void writeWinner() 
	' + Color getColor() 
}

class TicTacToe {
	' - TicTacToe() 
	' - void play() 
	' - void playGame() 
	' - boolean isResumedGame() 
	' + {static} void main(String[])
}

class Turn {
	' - {static} int NUMBER_PLAYERS = 2
	' - int activePlayer
	' + Turn(Board) 
	' + void reset()
	' + void play()
	' + void writeWinner()
	' + Color getActiveColor() 
}

class YesNoDialogView {
	' - String answer
	' + void read(String)
	' + boolean isAffirmative()
	' - char getAnswer() 
	' + boolean isNegative() 
}

class ClosedInterval {
	' - int min;
	' - int max;
	' + ClosedInterval(int, int) 
	' + boolean isIncluded(int) 
	' + String toString()
	' + boolean equals(ClosedInterval)
}

TicTacToe *--> Turn
TicTacToe *--> Board
TicTacToe --> TurnView
TicTacToe --> BoardView
TicTacToe ..> YesNoDialogView
TurnView *--> Turn
TurnView --> BoundedCoordinate
TurnView ..> MessageView
TurnView ..> PlayerView
TurnView ..> Message
Turn *--> "2" Player
Player o--> Board
Player ..> Color
PlayerView ..> Player
PlayerView ..> ErrorView
PlayerView ..> Error
PlayerView ..> MessageView
PlayerView ..> Message
PlayerView ..> BoundedCoordinateView
ErrorView *--> Error
Board *--> "3x3" Color
Board ..> BoundedCoordinate
Board ..> Direction
BoardView ..> Message
BoardView ..> BoundedCoordinate
BoardView *--> Board
BoardView ..> ColorView
BoundedCoordinate *--> Coordinate
Coordinate ..> Direction
BoundedCoordinateView ..> BoundedIntDialogView
BoundedCoordinateView ..> BoundedCoordinate
BoundedIntDialogView ..> ClosedInterval
MessageView *--> Message
ColorView *--> Color

@enduml